--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Interactive Closet</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <!-- Avatar Section -->
+        <div class="avatar-container">
+            <img id="avatar" src="assets/avatar.png" alt="Avatar">
+            <img id="top-layer" class="layer" src="assets/tops/top1.png" alt="Top">
+            <img id="bottom-layer" class="layer" src="assets/bottoms/bottom1.png" alt="Bottom">
+            <img id="shoes-layer" class="layer" src="assets/shoes/shoes1.png" alt="Shoes">
+        </div>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+        <!-- Options for Clothing -->
+        <div class="options-container">
+            <div id="top-options" class="options">
+                <h3>Tops</h3>
+                <button onclick="changeClothing('top-layer', 'assets/tops/top1.png')">Top 1</button>
+                <button onclick="changeClothing('top-layer', 'assets/tops/top2.png')">Top 2</button>
+            </div>
+            <div id="bottom-options" class="options">
+                <h3>Bottoms</h3>
+                <button onclick="changeClothing('bottom-layer', 'assets/bottoms/bottom1.png')">Bottom 1</button>
+                <button onclick="changeClothing('bottom-layer', 'assets/bottoms/bottom2.png')">Bottom 2</button>
+            </div>
+            <div id="shoes-options" class="options">
+                <h3>Shoes</h3>
+                <button onclick="changeClothing('shoes-layer', 'assets/shoes/shoes1.png')">Shoes 1</button>
+                <button onclick="changeClothing('shoes-layer', 'assets/shoes/shoes2.png')">Shoes 2</button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
